--- a/Codes/PsyArXiv_Code.Rmd
+++ b/Codes/PsyArXiv_Code.Rmd
@@ -9,7 +9,7 @@ output: html_document
 
 ```{r}
 knitr::opts_chunk$set(echo = FALSE)
-install.packages(c("ggplot2","dplyr","tidyr","ggcorrplot","ggpubr","statsr","lme4","lmerTest","magick"))
+install.packages(c("ggplot2","dplyr","tidyr","ggcorrplot","ggpubr","statsr","lme4","lmerTest"))
 library(ggplot2)
 library(dplyr)
 library(tidyr)
@@ -18,7 +18,6 @@ library(ggpubr)
 library(statsr)
 library(lme4)
 library(lmerTest)
-library(magick)
 ```
 
 # 2. Upload datasets in correct format and descriptive stats
@@ -71,13 +70,15 @@ ggsave("corr_plot.png")
 
 data022822 <- data022822 %>% 
   rowwise() %>% 
-  mutate(rf_avg = mean(c(rf1, rf2, rf3, rf4, rf5, rf6, rf7, rf8, rf9, rf10), na.rm = TRUE),
-         rt_avg = mean(c(rt1, rt2, rt3, rt4, rt5, rt6, rt7, rt8, rt9, rt10), na.rm = TRUE))
+  mutate(rf_avg = mean(as.numeric(c(rf1, rf2, rf3, rf4, rf5, rf6, rf7, rf8, rf9, rf10)), na.rm = TRUE),
+         rt_avg = mean(as.numeric(c(rt1, rt2, rt3, rt4, rt5, rt6, rt7, rt8, rt9, rt10)), na.rm = TRUE))
 
-# Summarize mean repayment by roles
+# Summarize group mean repayment by roles (mean & SD)
 
 rf_avg_p_mean<-colMeans(data022822[data022822$Role=="P" & is.nan(data022822$rf_avg)==FALSE,][,'rf_avg'])
+rf_avg_p_sd<-sd(data022822_p$rf_avg, na.rm = TRUE)
 rf_avg_t_mean<-colMeans(data022822[data022822$Role=="T",][,'rf_avg']) # this value should be 0.571
+rf_avg_T_sd<-sd(data022822_t$rf_avg, na.rm = TRUE)
 
 # For Supplementary Table 2: Create a separate dataframe for social reprocity information received by participants (note: reciprocity value for r1 and r2 cannot be calculated as it requires player beavhior in the previous two rounds)
 
@@ -125,47 +126,48 @@ inference(y=neg, x=Role, data=investment, statistic="mean", type="ci", conf_leve
 
 # Create Figure 1
 
-# Fig 1a: Trust Game cartoon
-tg <- image_read('~/Data/Trust Game Data/TG_exp.png') 
-tg <-image_annotate(tg, "A", size=100, gravity = "northwest", color = "black")
-tg <- image_scale(tg, "800")
-print(tg)
+# Fig 1A: Mean pepayment frequency distribution between therapists and patients
 
-# Fig 1b: Mean pepayment frequency distribution between therapists and patients
-
-Fig1b <- ggplot(data022822)+
+Fig1A <- ggplot(data022822)+
   geom_histogram(data=data022822[data022822$Role=="P",],
                  aes(x=rf_avg), fill="Orange", alpha = 1, position="identity")+
   geom_vline(aes(xintercept = rf_avg_p_mean), colour="Orange", linetype=5)+
   geom_histogram(data=data022822[data022822$Role=="T",],
                  aes(x=rf_avg), fill="Blue", alpha = 0.8, position="identity")+
   geom_vline(aes(xintercept = rf_avg_t_mean), colour="Blue", linetype=5)+
+  geom_text(data = data.frame(x = c(0.74, 0.75),
+                              y = c(5, 4.5), 
+                              label = c(paste("Mean P:", round(rf_avg_p_mean, 2)), 
+                                        paste("Mean T:", round(rf_avg_t_mean, 2)))),
+            aes(x = x, y = y, label = label),
+            vjust = -0.5, size = 3.5, color = c("orange", "blue"))+ 
   labs(y="Frequency", x="Mean Repayment",
-       tag="B")+
+       tag="A")+
   scale_fill_manual(name="Role", 
                     values=c("Orange", "Blue"), 
                     labels=c("Patient", "Therapist"))
 
-# Fig 1c: Correlation between mean repayment frequency and therapeutic alliance
+# Fig 1B: Correlation between mean repayment frequency and therapeutic alliance
 
-Fig1c <- ggplot(data022822, aes(rf_avg, Indiv_Total, color=Role))  +
+Fig1B <- ggplot(data022822, aes(rf_avg, Indiv_Total, color=Role)) +
   geom_point() +
-  geom_smooth(method=lm)+
+  geom_smooth(method="lm") +
+  geom_text(data = data.frame(x = c(0.79, 0.78),
+                              y = c(84, 81), 
+                              label = c("P: r=0.48, p=0.003",
+                                        "T: r=0.23, p=0.15")),
+            aes(x = x, y = y, label = label),
+            vjust = -0.5, size = 3.5, color = c("orange", "blue"))+
   scale_color_manual(name="Role",
                      values=c("Orange", "Blue"), 
                      labels=c("Patient", "Therapist")) +
   labs(y="Alliance", x="Mean Repayment",
-       tag="C")
+       tag="B")
 
-# Combine Fig 1a, b, c into Fig 1.
+# Combine Fig 1A, 1B into Fig 1.
 
-Fig1bc <- ggarrange(Fig1b, Fig1c, ncol=2, nrow=1, common.legend = TRUE)
-ggsave("Fig1bc.png", width=4, height=2)
-tg_2 <-image_read('~/Data/Trust Game Data/Fig1bc.png')
-
-tg_full <-c(tg, tg_2)
-Fig1 <-image_append(image_scale(tg_full, "700"), stack=TRUE)
-image_write(Fig1, path = "Fig1.png", format = "png")
+Fig1 <- ggarrange(Fig1A, Fig1B, ncol=2, nrow=1, common.legend = TRUE)
+ggsave("Fig1.png", width=8, height=3)
 
 # Supplementary Figure 2: Patients' average repayment fraction is not correlated with attachment closeness subscale.
 
@@ -223,7 +225,7 @@ ggplot(mixed, aes(x=rf, color=ID))+
 
 ```{r}
 
-# Binarize reciprocity into malevolence vs benevolence
+# Binarize reciprocity into negative (malevolence) vs positive (benevolence)
 
 mixed$intention<-ifelse(mixed$r>0,"Benevolence",
                           ifelse(mixed$r<0, "Malevolence",NA))
@@ -231,10 +233,10 @@ mixed$intention<-ifelse(mixed$r>0,"Benevolence",
 # Delete round observations with NA in either r or d_rf column 
 
 mixed_filtered <- mixed %>% 
-  filter(!is.na(r) & !is.na(d_rf)) #75 rounds should be lost due to NA data. Checkpoint.
+  filter(!is.na(r) & !is.na(d_rf)) #75 rounds should be lost due to NA data. 
 
 mixed_filtered$intention<-as.factor(mixed_filtered$intention)
-summary(mixed_filtered$intention) #26 neutral intentions. 
+summary(mixed_filtered$intention) #26 neutral intentions. Checkpoint.
 
 # Fig 2: Plot changes in repayment fraction ~ social reciprocity
 
@@ -248,11 +250,12 @@ Fig2 <- ggplot(d_rf_intention, aes(x=intention, y=mean_d_rf, fill=Role))+
   geom_errorbar(
     aes(x=intention, ymin=mean_d_rf-se, ymax=mean_d_rf+se, width=0.04), position=position_dodge(width=0.2))+
   labs(x="Therapy partner's intention", y="Mean Fractional Change in Repayment")+
+  scale_x_discrete(labels = c("Positive", "Negative"))+
   scale_fill_manual(name="Role", 
                     values=c("Orange", "Blue"), 
                     labels=c("Patient", "Therapist"))
 
-ggsave("Fig2.png", width=5, height=3) 
+ggsave("Fig2.png", width=8, height=4) 
 
 # Divide into different dataframes based on their roles (patients vs therapists)
 
@@ -276,7 +279,7 @@ var.test(tbv$d_rf, tml$d_rf) #p>0.05 in variance test indicates homoscedasticity
 # Run t.test between two conditions within the same role
 
 t.test(d_rf~intention, paired=FALSE, vars.equal=TRUE,
-       data=mixed_p_without_neutral) # Note: not exactly matched or paired, i.e. some patients had more malevolent rounds than benevolent rounds, error in complete.cases(x,y): not all arguments have the same length. only patient data show sig differences between conditions
+       data=mixed_t_without_neutral) # Note: not exactly matched or paired, i.e. some patients had more malevolent rounds than benevolent rounds, error in complete.cases(x,y): not all arguments have the same length. only patient data show sig differences between conditions
 
 # Run t.test between two roles within same condition
 
@@ -285,7 +288,7 @@ mixed_filtered[mixed_filtered$intention=="Benevolence",] %>%
 mixed_filtered[mixed_filtered$intention=="Benevolence",] %>% 
   filter(Role!="T")->tP
 
-var.test(tT$d_rf, tP$d_rf) #p>0.05 homoscedacticity for benevolence, but p=0.03 for malevolence
+var.test(tT$d_rf, tP$d_rf) #p>0.05 homoscedacticity for positive (benevolence), but p=0.03 for malevolence
 
 t.test(d_rf~Role, paired=FALSE, vars.equal=TRUE,
        data=mixed_filtered[mixed_filtered$intention=="Benevolence",]) 
@@ -299,7 +302,7 @@ t.test(d_rf~Role, paired=FALSE, vars.equal=TRUE,
 # Identify median alliance in patient group to binarize alliance variables into high vs. low alliance
 
 test_mixed_p<-mixed_p %>% 
-  distinct(ID, .keep_all = TRUE) # trim down the dataframe to isolate clinical variable that is unique to each partient
+  distinct(ID, .keep_all = TRUE) # trim down the dataframe to isolate clinical variable that is unique to each partcipant
 
 summary(test_mixed_p$Indiv_Total) #median should be 74. Check point. 
 
@@ -323,14 +326,22 @@ mixed_p[,factors_2]<-lapply(mixed_p[,factors_2], factor)
 aov_d_rf_alliance <- aov(d_rf ~ intention * alliance_Q, data=mixed_p[is.na(mixed_p$intention)==FALSE,])
 summary(aov_d_rf_alliance) # not significant
 
-# Summarize the mean changes in repayment fraction across social reciprocity and alliance conditions 
+# Run two extra 2 x 2 ANOVA to test impact of attachment anxiety (model of self), and by attachment avoidance (model of others) on changes in repayment fraction.
+
+aov_d_rf_anxiety <- aov(d_rf ~ intention * anxiety_Q, data=mixed_p[is.na(mixed_p$intention)==FALSE,])
+summary(aov_d_rf_anxiety) 
+
+aov_d_rf_avoidance <- aov(d_rf ~ intention * avoidance_Q, data=mixed_p[is.na(mixed_p$intention)==FALSE,])
+summary(aov_d_rf_avoidance) 
+
+# Now, summarize the mean changes in repayment fraction across social reciprocity and alliance conditions 
 
 d_rf_by_alliance_Q <-mixed_p[is.na(mixed_p$intention)==FALSE,] %>% 
   group_by(alliance_Q, intention) %>% 
   summarise(sd=sd(d_rf, na.rm=TRUE), mean_d_rf=mean(d_rf, na.rm=TRUE), n=n())%>%
   mutate(se=sd/sqrt(n))
 
-# Run correlation test to examine relationship between in mean fractional change in repayment and individual alliance rating within each social reciprocity condition
+# Run correlation test between mean fractional change in repayment and individual alliance ratings within each social reciprocity condition (malevolent vs. benevolent)
 
 d_rf_by_intention_p <-mixed_p[is.na(mixed_p$intention)==FALSE,] %>%
   group_by(intention, ID) %>% 
@@ -338,8 +349,20 @@ d_rf_by_intention_p <-mixed_p[is.na(mixed_p$intention)==FALSE,] %>%
   mutate(se=sd/sqrt(n)) %>% 
   distinct(ID, .keep_all = TRUE)
 
+d_rf_by_anxiety_p <-mixed_p[is.na(mixed_p$intention)==FALSE,] %>%
+  group_by(intention, ID) %>% 
+  summarise(ID=ID, sd=sd(d_rf, na.rm=TRUE), mean_d_rf=mean(d_rf, na.rm=TRUE), n=n(), Anxiety=Anxiety)%>%
+  mutate(se=sd/sqrt(n)) %>% 
+  distinct(ID, .keep_all = TRUE)
+
 attach(d_rf_by_intention_p[d_rf_by_intention_p$intention=="Benevolence",])
 cor.test(mean_d_rf, Indiv_Total, alternative="two.sided", method="pearson") # not significant for linear relationship in either benevolent or malevolent condition
+
+attach(d_rf_by_anxiety_p[d_rf_by_anxiety_p$intention=="Malevolence",])
+cor.test(mean_d_rf, Anxiety, alternative="two.sided", method="pearson") # how about anxiety group since its F score was high in 2 x 2 ANOVA? not sig in benevolent conditions, also not sig in malevolent conditions; but trend is anxiety increases decrease in repayment in malevolent conditions.
+
+attach(d_rf_by_anxiety_p)
+plot(mean_d_rf, Anxiety) 
 
 ```
 
@@ -376,16 +399,16 @@ lm1_2 <- lmer(d_rf ~ 1 + r_high_alliance + r_low_alliance + (1 + r_high_alliance
 # Figure 3: plot y = changes in repayment fraction ~ x = social reciprocity values across high vs. low alliance groups.
 
 Fig3 <-ggplot(mixed_p_lme4, aes(x=r, y=d_rf, fill=alliance_Q))+
+    geom_rect(aes(xmin=-5, xmax=0, ymin=-1, ymax=1), fill = "pink", alpha = 0.01) +
+  geom_rect(aes(xmin=0, xmax=5, ymin=-1, ymax=1), fill = "skyblue", alpha = 0.01) +
   geom_point(aes(fill=alliance_Q))+
-  facet_wrap(~alliance_Q)+
+  facet_wrap(~alliance_Q, labeller = labeller(alliance_Q = c("Bottom_Half" = "Lower half alliance group", "Top_Half" = "Upper half alliance group")))+
   geom_smooth(method="lm", color="black", alpha=0.5)+
-  scale_fill_manual(name="Alliance Quality", 
-                    values=c("Red", "Green"), 
-                    labels=c("Bottom 50%", "Top 50%"))+
   xlim(-5,5)+
-  labs(x="Therapist's Reciprocity", y="Fractional Change in Repayment")
+  labs(x="Simulated therapist's reciprocity", y="Fractional Change in Repayment")+
+  theme(legend.position = "none") 
 
-ggsave("Fig3.png", height=4, width=10)
+ggsave("Fig3.png", height=4, width=8)
 
 # For supplementary table 4:
 
@@ -407,5 +430,7 @@ lm1_3 <- lmer(d_rf ~ 1 + r_high_alliance + r_low_alliance + Anxiety + Avoidance 
 anova(lm1_0, lm1_1, lm1_2, lm1_3) #lm1_0 is still winning
 summary(lm1_3)
 confint(lm1_3) #CI for beta regressor
+
+# End
 
 ```
